<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/content_bg_white"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="center|center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/scan_text_title_count_1"
                android:textColor="@color/title_text_black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_scan_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/scan_text_title_count_2"
                android:textColor="@color/content_text_green"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/scan_text_title_count_3"
                android:textColor="@color/title_text_black"
                android:textSize="24sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical" >

            <Button
                android:id="@+id/btn_scan_execute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/content_text_green"
                android:padding="5dp"
                android:text="@string/scan_text_title_button_1"
                android:textColor="@color/content_text_white"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/content_bg_blue"
        android:gravity="center|center_horizontal|center_vertical" >

        <TextView
            android:id="@+id/tv_scan_current"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="123456789012345678"
            android:textColor="@color/content_text_white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="monospace" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/content_bg_white"
        android:gravity="center|center_horizontal|center_vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/scan_text_title_content"
            android:textColor="@color/title_text_black"
            android:textSize="24sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/content_bg_white"
            android:gravity="center|center_horizontal|center_vertical" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/scan_text_title_content_num_1"
                android:textColor="@color/title_text_black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_scan_history1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:textColor="@color/title_text_black"
                android:textSize="24sp"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/content_bg_white"
            android:gravity="center|center_horizontal|center_vertical" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/scan_text_title_content_num_2"
                android:textColor="@color/title_text_black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_scan_history2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:textColor="@color/title_text_black"
                android:textSize="24sp"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/content_bg_white"
            android:gravity="center|center_horizontal|center_vertical" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/scan_text_title_content_num_3"
                android:textColor="@color/title_text_black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_scan_history3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:textColor="@color/title_text_black"
                android:textSize="24sp"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/content_bg_white"
            android:gravity="center|center_horizontal|center_vertical" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/scan_text_title_content_num_4"
                android:textColor="@color/title_text_black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_scan_history4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:textColor="@color/title_text_black"
                android:textSize="24sp"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/content_bg_white"
            android:gravity="center|center_horizontal|center_vertical" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/scan_text_title_content_num_5"
                android:textColor="@color/title_text_black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_scan_history5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:textColor="@color/title_text_black"
                android:textSize="24sp"
                android:typeface="monospace" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>